--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -12,23 +11,103 @@
       text-align: center;
       margin: 0;
       padding: 30px 20px;
+      position: relative;
+      overflow: hidden;
     }
-    h1, p, .dica, .mensagem-carinhosa, .erro {
+
+    .heart-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    .heart-bg span {
+      position: absolute;
+      display: block;
+      animation: float 8s linear infinite;
+      opacity: 0;
+      font-size: 20px;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 0;
+      }
+      20% {
+        opacity: 1;
+      }
+      80% {
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-20vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
+
+    .content {
+      position: relative;
+      z-index: 1;
+    }
+
+    .logo {
+      font-size: 3rem;
+      margin-top: 20px;
       color: #c73866;
     }
+
+    h1 {
+      color: #c73866;
+      font-size: 2rem;
+      margin: 10px 0 5px;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    p {
+      color: #8b1e3f;
+      font-size: 1rem;
+      margin-bottom: 15px;
+    }
+
+    .dica {
+      font-style: italic;
+      color: #8b1e3f;
+      margin-bottom: 20px;
+      min-height: 20px;
+    }
+
+    .mensagem-carinhosa {
+      color: #c73866;
+      font-weight: bold;
+      margin: 10px 0;
+      min-height: 20px;
+    }
+
     .senha-digitada {
-      background: #fff;
+      background: #ffffffdd;
       border: 2px solid #c73866;
       border-radius: 12px;
       font-size: 2rem;
       letter-spacing: 10px;
       padding: 10px 20px;
       width: fit-content;
-      margin: 20px auto;
+      margin: 0 auto 25px;
       color: #333;
-      transition: none !important;
-      transform: none !important;
     }
+
+    .teclado {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 15px;
+      max-width: 300px;
+      margin: 0 auto 20px;
+    }
+
     .num-btn {
       font-size: 1.5rem;
       padding: 20px;
@@ -37,62 +116,142 @@
       border-radius: 20px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       color: #c73866;
+      transition: background 0.2s, transform 0.1s;
     }
-    .teclado {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
-      max-width: 300px;
-      margin: 0 auto;
+
+    .num-btn:active {
+      background-color: #f9bfd5;
+      transform: scale(0.95);
     }
+
+    .controle {
+      background-color: #f9bfd5;
+    }
+
     .erro {
+      color: #8b1e3f;
       margin-top: 10px;
       display: none;
     }
   </style>
 </head>
 <body>
-  <h1>Meu Amor</h1>
-  <p>uma data especial para nós</p>
-  <div class="dica">Dica: O dia em que começamos nosso namoro</div>
-  <div class="mensagem-carinhosa"></div>
-  <div class="senha-digitada" id="senhaDigitada"></div>
-  <div class="teclado">
-    <button class="num-btn">1</button><button class="num-btn">2</button><button class="num-btn">3</button>
-    <button class="num-btn">4</button><button class="num-btn">5</button><button class="num-btn">6</button>
-    <button class="num-btn">7</button><button class="num-btn">8</button><button class="num-btn">9</button>
-    <button class="num-btn" id="limpar">⌫</button><button class="num-btn">0</button><button class="num-btn" id="esconder">🔒</button>
+  <div class="heart-bg" id="heartBg"></div>
+  
+  <div class="content">
+    <div class="logo">💖</div>
+    <h1>Meu Amor</h1>
+    <p>uma data especial para nós</p>
+    <div class="dica" id="dica">Dica: O dia em que começamos nosso namoro</div>
+    <div class="mensagem-carinhosa" id="mensagemCarinhosa"></div>
+
+    <div class="senha-digitada" id="senhaDigitada"></div>
+
+    <div class="teclado">
+      <button class="num-btn">1</button>
+      <button class="num-btn">2</button>
+      <button class="num-btn">3</button>
+      <button class="num-btn">4</button>
+      <button class="num-btn">5</button>
+      <button class="num-btn">6</button>
+      <button class="num-btn">7</button>
+      <button class="num-btn">8</button>
+      <button class="num-btn">9</button>
+      <button class="num-btn controle" id="limpar">⌫</button>
+      <button class="num-btn">0</button>
+      <button class="num-btn controle" id="esconder">🔒</button>
+    </div>
+
+    <div class="erro" id="erro">Senha incorreta 💭</div>
   </div>
-  <div class="erro" id="erro">Senha incorreta 💭</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const senhaCorreta = "1810";
+    const senhaCorreta = "1810"; // Alterado para 18/10
     let senhaAtual = "";
     const senhaDigitada = document.getElementById('senhaDigitada');
     const erro = document.getElementById('erro');
+    const mensagemCarinhosa = document.getElementById('mensagemCarinhosa');
+    const heartBg = document.getElementById('heartBg');
 
+    // Criar corações flutuantes melhorados
+    function criarCoracoes() {
+      const cores = ['#ff0000', '#ff69b4', '#ff1493', '#c73866', '#d6336c'];
+      const emojis = ['❤️', '💖', '💗', '💘', '💝'];
+      
+      for (let i = 0; i < 20; i++) {
+        const heart = document.createElement('span');
+        heart.innerHTML = emojis[Math.floor(Math.random() * emojis.length)];
+        heart.style.left = Math.random() * 100 + 'vw';
+        heart.style.color = cores[Math.floor(Math.random() * cores.length)];
+        heart.style.fontSize = (Math.random() * 20 + 15) + 'px';
+        heart.style.animationDuration = (Math.random() * 5 + 5) + 's';
+        heart.style.animationDelay = Math.random() * 3 + 's';
+        heartBg.appendChild(heart);
+      }
+    }
+
+    // Mensagens carinhosas conforme digita
+    const mensagens = {
+      1: "Você é incrível!",
+      2: "Meu coração é seu!",
+      3: "Nosso amor é lindo!",
+      4: "Você completa minha vida!"
+    };
+
+    // Efeito de confete
+    function triggerConfetti() {
+      confetti({
+        particleCount: 150,
+        spread: 70,
+        origin: { y: 0.6 },
+        colors: ['#ff0000', '#ff69b4', '#ff1493']
+      });
+    }
+
+    // Teclado numérico
     document.querySelectorAll('.num-btn').forEach(btn => {
       btn.addEventListener('click', () => {
         const valor = btn.textContent;
-        if (valor === "⌫") senhaAtual = senhaAtual.slice(0, -1);
-        else if (valor === "🔒") senhaAtual = "";
-        else senhaAtual += valor;
+
+        if (valor === "⌫") {
+          senhaAtual = senhaAtual.slice(0, -1);
+        } else if (valor === "🔒") {
+          senhaAtual = "";
+        } else if (senhaAtual.length < senhaCorreta.length) {
+          senhaAtual += valor;
+        }
 
         senhaDigitada.textContent = senhaAtual.replace(/./g, "•");
+        
+        // Mostrar mensagens carinhosas
+        if (senhaAtual.length in mensagens) {
+          mensagemCarinhosa.textContent = mensagens[senhaAtual.length];
+        } else {
+          mensagemCarinhosa.textContent = "";
+        }
 
         if (senhaAtual.length === senhaCorreta.length) {
           if (senhaAtual === senhaCorreta) {
             erro.style.display = 'none';
-            window.location.href = 'escolha.html';
+            triggerConfetti();
+            setTimeout(() => {
+              window.location.href = 'escolha.html';
+            }, 1500);
           } else {
             erro.style.display = 'block';
             senhaAtual = "";
             senhaDigitada.textContent = "";
+            mensagemCarinhosa.textContent = "Tente novamente, amor!";
           }
         } else {
           erro.style.display = 'none';
         }
       });
     });
+
+    // Inicializar corações flutuantes
+    criarCoracoes();
   </script>
 </body>
 </html>
